# dep.keystone

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dep_keystone/: __init__.py  cli.py  hashing.py  models.py  report.py  sbom.py
src/dep_keystone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dep_keystone/parsers/: requirements_txt.py
tests/: test_cli.py  test_hashing.py  test_requirements_parser.py
