[project]
name = "dep-keystone"
version = "0.1.0"
description = "Deterministic dependency verification and SBOM attestation engine"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "click>=8.1.7"
]

[project.scripts]
dep-keystone = "dep_keystone.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
